# GVal

./: BinaryInputStream.cpp  BinaryInputStream.h  BinaryStream.cpp  BinaryStream.h  CMakeLists.txt  FileInputStream.cpp  FileInputStream.h  FileStream.cpp  FileStream.h  GVal.cpp  GVal.files  GVal.h  GValFormatter.cpp  GValFormatter.h  GValParser.cpp  GValParser.h  GValProgressReporter.cpp  GValProgressReporter.h  GValSerializer.cpp  GValSerializer.h  GValSmallVector.h  GValTest.cpp  GValUtils.cpp  GValUtils.h  InputStream.h  MemoryStream.cpp  MemoryStream.h  MultiArrayIterator.cpp  MultiArrayIterator.h  MultiArraySlice.cpp  MultiArraySlice.h  ProgressReporter.cpp  ProgressReporter.h  README  SmallVector.h  Stream.h  Sutf.cpp  makefile  toString.cpp  toString.h
